--- a/src/app/calculadora/calculadora.component.html
+++ b/src/app/calculadora/calculadora.component.html
@@ -1,8 +1,9 @@
 <form>
-  <input type="text">
-  <input type="text">
-  <button>sum</button>
+  <input type="number" [(ngModel)]="num1" name="num1">
+  <input type="number" [(ngModel)]="num2" name="num2">
+  <button (click)="sum()">sum</button>
   <button>subtraction</button>
   <button>multiplication</button>
   <button>division</button>
+  <p>resultado {{result}}</p>
 </form>
