added the function subtraction

--- a/src/app/calculadora/calculadora.component.html
+++ b/src/app/calculadora/calculadora.component.html
@@ -2,7 +2,7 @@
   <input type="number" [(ngModel)]="num1" name="num1">
   <input type="number" [(ngModel)]="num2" name="num2">
   <button (click)="sum()">sum</button>
-  <button>subtraction</button>
+  <button (click)="subtraction()">subtraction</button>
   <button>multiplication</button>
   <button>division</button>
   <p>resultado {{result}}</p>
