added the multiplication function

--- a/src/app/calculadora/calculadora.component.html
+++ b/src/app/calculadora/calculadora.component.html
@@ -3,7 +3,7 @@
   <input type="number" [(ngModel)]="num2" name="num2">
   <button (click)="sum()">sum</button>
   <button (click)="subtraction()">subtraction</button>
-  <button>multiplication</button>
+  <button (click)="multiplication()">multiplication</button>
   <button>division</button>
   <p>resultado {{result}}</p>
 </form>
