created the division function

--- a/src/app/calculadora/calculadora.component.html
+++ b/src/app/calculadora/calculadora.component.html
@@ -4,6 +4,6 @@
   <button (click)="sum()">sum</button>
   <button (click)="subtraction()">subtraction</button>
   <button (click)="multiplication()">multiplication</button>
-  <button>division</button>
+  <button (click)="division()">division</button>
   <p>resultado {{result}}</p>
 </form>
