added a CSS and anothers marker in HTML for esthetics

--- a/src/app/calculadora/calculadora.component.html
+++ b/src/app/calculadora/calculadora.component.html
@@ -1,9 +1,25 @@
-<form>
-  <input type="number" [(ngModel)]="num1" name="num1">
-  <input type="number" [(ngModel)]="num2" name="num2">
-  <button (click)="sum()">sum</button>
-  <button (click)="subtraction()">subtraction</button>
-  <button (click)="multiplication()">multiplication</button>
-  <button (click)="division()">division</button>
-  <p>resultado {{result}}</p>
-</form>
+<div class="content">
+  <div class="calculator">
+    <form>
+      <div class="display">
+        <div class="input-group">
+          <label for="num1">First Number: </label>
+          <input type="number" [(ngModel)]="num1" name="num1" id="num1">
+        </div>
+        <div class="input-group">
+          <label for="num2">Second Number: </label>
+          <input type="number" [(ngModel)]="num2" name="num2" id="num2">
+        </div>
+      </div>
+      <div class="button-group">
+        <button type="button" (click)="sum()">sum</button>
+        <button type="button" (click)="subtraction()">subtraction</button>
+        <button type="button" (click)="multiplication()">multiplication</button>
+        <button type="button" (click)="division()">division</button>
+      </div>
+      <div class="result">
+        <p>Result: {{result}}</p>
+      </div>
+    </form>
+  </div>
+</div>
